--- a/Webapp.ipynb
+++ b/Webapp.ipynb
@@ -169,7 +169,7 @@
         "outputId": "3597ea88-9cb9-4f90-d38f-2a6ea83bbd8f"
       },
       "source": [
-        "!ngrok authtoken 1gD1982OyS8CTv6RSgdU8PkvwQd_7ML1LmRWb8wBQxNKPxRWa"
+        "!ngrok authtoken XXXXX"
       ],
       "execution_count": 10,
       "outputs": [
