--- a/Webapp.ipynb
+++ b/Webapp.ipynb
@@ -100,11 +100,7 @@
       "metadata": {
         "id": "bWRm8_U0zyOL",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "6884a7ab-3ba2-4e39-cc25-81043c4d8d9d"
+        "colab": {}
       },
       "source": [
         "%%writefile app.py\n",
@@ -165,41 +161,21 @@
         "    main()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting app.py\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "psoiZ2l-1tYr",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 32
-        },
-        "outputId": "f80737c5-00a9-440e-e79c-d0daa7116d8d"
+        "colab": {}
       },
       "source": [
         "#Displays the list of files in current directory\n",
         "!ls"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "app.py\tsample_data\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -219,25 +195,13 @@
       "metadata": {
         "id": "Vzt__pIe3Yu_",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9d12117d-a62b-416f-9344-265799e8be77"
+        "colab": {}
       },
       "source": [
         "!ngrok authtoken xxxxx"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Authtoken saved to configuration file: /root/.ngrok2/ngrok.yml\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -271,26 +235,14 @@
       "metadata": {
         "id": "jtU-gHk84rRd",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e8f66fc4-9371-4ee3-a8a9-dfa2db662082"
+        "colab": {}
       },
       "source": [
         "# to check streamlit is running or not in linux machine you can check the command below\n",
         "!pgrep streamlit"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "213\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -311,33 +263,13 @@
       "metadata": {
         "id": "VjRBP6-n6h-j",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "f9ebc76a-3ff7-4ce6-d197-b710c32d30fc"
+        "colab": {}
       },
       "source": [
         "publ_url"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'http://44cf5deef4f8.ngrok.io'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
