--- a/Webapp.ipynb
+++ b/Webapp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVKoU1FGmVaBY3MADhi7l3",
+      "authorship_tag": "ABX9TyPhhwzDdLr6an/tPo3dDS0I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,7 +198,9 @@
         "colab": {}
       },
       "source": [
-        "!ngrok authtoken xxxxx"
+        "# enter your token value inplace of xxxx\n",
+        "# get token value from the url https://dashboard.ngrok.com/auth/your-authtoken\n",
+        "!ngrok authtoken XXXXXX"
       ],
       "execution_count": null,
       "outputs": []
@@ -213,7 +215,7 @@
       "source": [
         "from pyngrok import ngrok"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -227,7 +229,7 @@
         "# To run streamlit in background - Linux Command\n",
         "!streamlit run app.py &>/dev/null&"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -255,7 +257,7 @@
         "# To configure the port in ngrok\n",
         "publ_url = ngrok.connect(port='8501')"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -266,6 +268,7 @@
         "colab": {}
       },
       "source": [
+        "# Displays the URL value\n",
         "publ_url"
       ],
       "execution_count": null,
@@ -283,6 +286,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Goe3ilUISbMD",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Refer the output of the web application in ngrok\n",
+        "\n",
+        "[Output](https://drive.google.com/file/d/12lqy7vDtJc4-Kz_KIT_A5Vm2w_YxXtQ8/view?usp=sharing)"
+      ]
     }
   ]
 }
